Improve color scheme contrast issues
By running a modified version of the script found in https://github.com/mpchadwick/pygments-high-contrast-stylesheets/blob/gh-pages/tools/make-stylesheet

I just needed to install dependencies with `bundle install --local` and
then run `bundle exec make-stylesheet styles.css output.css`. The script
will work for Chroma stylesheets if you change the '.highlight' to
'.chroma' at this line:
https://github.com/mpchadwick/pygments-high-contrast-stylesheets/blob/5c637dd0c26aabbcd748701f96f69bbcbf5b0744/tools/make-stylesheet#L19.

--- a/assets/css/dark-syntax-highlight.css
+++ b/assets/css/dark-syntax-highlight.css
@@ -1,85 +1,67 @@
-/* Background */ .bg { color: #d0d0d0; background-color: #202020 }
-/* PreWrapper */ .chroma { color: #d0d0d0; background-color: #202020; }
-/* Other */ .chroma .x {  }
-/* Error */ .chroma .err { color: #a61717; background-color: #e3d2d2 }
-/* CodeLine */ .chroma .cl {  }
-/* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
-/* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; }
-/* LineHighlight */ .chroma .hl { background-color: #ffffcc }
-/* LineNumbersTable */ .chroma .lnt { white-space: pre; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #686868 }
-/* LineNumbers */ .chroma .ln { white-space: pre; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #686868 }
-/* Line */ .chroma .line { display: flex; }
-/* Keyword */ .chroma .k { color: #6ab825; font-weight: bold }
-/* KeywordConstant */ .chroma .kc { color: #6ab825; font-weight: bold }
-/* KeywordDeclaration */ .chroma .kd { color: #6ab825; font-weight: bold }
-/* KeywordNamespace */ .chroma .kn { color: #6ab825; font-weight: bold }
-/* KeywordPseudo */ .chroma .kp { color: #6ab825 }
-/* KeywordReserved */ .chroma .kr { color: #6ab825; font-weight: bold }
-/* KeywordType */ .chroma .kt { color: #6ab825; font-weight: bold }
-/* Name */ .chroma .n {  }
-/* NameAttribute */ .chroma .na { color: #bbbbbb }
-/* NameBuiltin */ .chroma .nb { color: #24909d }
-/* NameBuiltinPseudo */ .chroma .bp {  }
-/* NameClass */ .chroma .nc { color: #447fcf; text-decoration: underline }
-/* NameConstant */ .chroma .no { color: #40ffff }
-/* NameDecorator */ .chroma .nd { color: #ffa500 }
-/* NameEntity */ .chroma .ni {  }
-/* NameException */ .chroma .ne { color: #bbbbbb }
-/* NameFunction */ .chroma .nf { color: #447fcf }
-/* NameFunctionMagic */ .chroma .fm {  }
-/* NameLabel */ .chroma .nl {  }
-/* NameNamespace */ .chroma .nn { color: #447fcf; text-decoration: underline }
-/* NameOther */ .chroma .nx {  }
-/* NameProperty */ .chroma .py {  }
-/* NameTag */ .chroma .nt { color: #6ab825; font-weight: bold }
-/* NameVariable */ .chroma .nv { color: #40ffff }
-/* NameVariableClass */ .chroma .vc {  }
-/* NameVariableGlobal */ .chroma .vg {  }
-/* NameVariableInstance */ .chroma .vi {  }
-/* NameVariableMagic */ .chroma .vm {  }
-/* Literal */ .chroma .l {  }
-/* LiteralDate */ .chroma .ld {  }
-/* LiteralString */ .chroma .s { color: #ed9d13 }
-/* LiteralStringAffix */ .chroma .sa { color: #ed9d13 }
-/* LiteralStringBacktick */ .chroma .sb { color: #ed9d13 }
-/* LiteralStringChar */ .chroma .sc { color: #ed9d13 }
-/* LiteralStringDelimiter */ .chroma .dl { color: #ed9d13 }
-/* LiteralStringDoc */ .chroma .sd { color: #ed9d13 }
-/* LiteralStringDouble */ .chroma .s2 { color: #ed9d13 }
-/* LiteralStringEscape */ .chroma .se { color: #ed9d13 }
-/* LiteralStringHeredoc */ .chroma .sh { color: #ed9d13 }
-/* LiteralStringInterpol */ .chroma .si { color: #ed9d13 }
-/* LiteralStringOther */ .chroma .sx { color: #ffa500 }
-/* LiteralStringRegex */ .chroma .sr { color: #ed9d13 }
-/* LiteralStringSingle */ .chroma .s1 { color: #ed9d13 }
-/* LiteralStringSymbol */ .chroma .ss { color: #ed9d13 }
-/* LiteralNumber */ .chroma .m { color: #3677a9 }
-/* LiteralNumberBin */ .chroma .mb { color: #3677a9 }
-/* LiteralNumberFloat */ .chroma .mf { color: #3677a9 }
-/* LiteralNumberHex */ .chroma .mh { color: #3677a9 }
-/* LiteralNumberInteger */ .chroma .mi { color: #3677a9 }
-/* LiteralNumberIntegerLong */ .chroma .il { color: #3677a9 }
-/* LiteralNumberOct */ .chroma .mo { color: #3677a9 }
-/* Operator */ .chroma .o {  }
-/* OperatorWord */ .chroma .ow { color: #6ab825; font-weight: bold }
-/* Punctuation */ .chroma .p {  }
-/* Comment */ .chroma .c { color: #999999; font-style: italic }
-/* CommentHashbang */ .chroma .ch { color: #999999; font-style: italic }
-/* CommentMultiline */ .chroma .cm { color: #999999; font-style: italic }
-/* CommentSingle */ .chroma .c1 { color: #999999; font-style: italic }
-/* CommentSpecial */ .chroma .cs { color: #e50808; background-color: #520000; font-weight: bold }
-/* CommentPreproc */ .chroma .cp { color: #cd2828; font-weight: bold }
-/* CommentPreprocFile */ .chroma .cpf { color: #cd2828; font-weight: bold }
-/* Generic */ .chroma .g {  }
-/* GenericDeleted */ .chroma .gd { color: #d22323 }
-/* GenericEmph */ .chroma .ge { font-style: italic }
-/* GenericError */ .chroma .gr { color: #d22323 }
-/* GenericHeading */ .chroma .gh { color: #ffffff; font-weight: bold }
-/* GenericInserted */ .chroma .gi { color: #589819 }
-/* GenericOutput */ .chroma .go { color: #cccccc }
-/* GenericPrompt */ .chroma .gp { color: #aaaaaa }
-/* GenericStrong */ .chroma .gs { font-weight: bold }
-/* GenericSubheading */ .chroma .gu { color: #ffffff; text-decoration: underline }
-/* GenericTraceback */ .chroma .gt { color: #d22323 }
-/* GenericUnderline */ .chroma .gl { text-decoration: underline }
-/* TextWhitespace */ .chroma .w { color: #666666 }
+.bg { color: #d0d0d0; background-color: #202020; }
+.chroma { color: #d0d0d0; background-color: #202020; }
+.chroma .err { color: #a61717; background-color: #e3d2d2; }
+.chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
+.chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; }
+.chroma .hl { background-color: #ffffcc; }
+.chroma .lnt { white-space: pre; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em; color: #898989; }
+.chroma .ln { white-space: pre; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em; color: #898989; }
+.chroma .line { display: flex; }
+.chroma .k { color: #6ab825; font-weight: bold; }
+.chroma .kc { color: #6ab825; font-weight: bold; }
+.chroma .kd { color: #6ab825; font-weight: bold; }
+.chroma .kn { color: #6ab825; font-weight: bold; }
+.chroma .kp { color: #6ab825; }
+.chroma .kr { color: #6ab825; font-weight: bold; }
+.chroma .kt { color: #6ab825; font-weight: bold; }
+.chroma .na { color: #bbbbbb; }
+.chroma .nb { color: #2594a1; }
+.chroma .nc { text-decoration: underline; color: #548bd3; }
+.chroma .no { color: #40ffff; }
+.chroma .nd { color: #ffa500; }
+.chroma .ne { color: #bbbbbb; }
+.chroma .nf { color: #548bd3; }
+.chroma .nn { text-decoration: underline; color: #548bd3; }
+.chroma .nt { color: #6ab825; font-weight: bold; }
+.chroma .nv { color: #40ffff; }
+.chroma .s { color: #ed9d13; }
+.chroma .sa { color: #ed9d13; }
+.chroma .sb { color: #ed9d13; }
+.chroma .sc { color: #ed9d13; }
+.chroma .dl { color: #ed9d13; }
+.chroma .sd { color: #ed9d13; }
+.chroma .s2 { color: #ed9d13; }
+.chroma .se { color: #ed9d13; }
+.chroma .sh { color: #ed9d13; }
+.chroma .si { color: #ed9d13; }
+.chroma .sx { color: #ffa500; }
+.chroma .sr { color: #ed9d13; }
+.chroma .s1 { color: #ed9d13; }
+.chroma .ss { color: #ed9d13; }
+.chroma .m { color: #438dc4; }
+.chroma .mb { color: #438dc4; }
+.chroma .mf { color: #438dc4; }
+.chroma .mh { color: #438dc4; }
+.chroma .mi { color: #438dc4; }
+.chroma .il { color: #438dc4; }
+.chroma .mo { color: #438dc4; }
+.chroma .ow { color: #6ab825; font-weight: bold; }
+.chroma .c { color: #999999; font-style: italic; }
+.chroma .ch { color: #999999; font-style: italic; }
+.chroma .cm { color: #999999; font-style: italic; }
+.chroma .c1 { color: #999999; font-style: italic; }
+.chroma .cs { background-color: #520000; font-weight: bold; color: #f75050; }
+.chroma .cp { font-weight: bold; color: #e15a5a; }
+.chroma .cpf { font-weight: bold; color: #e15a5a; }
+.chroma .gd { color: #e75959; }
+.chroma .ge { font-style: italic; }
+.chroma .gr { color: #e75959; }
+.chroma .gh { color: #ffffff; font-weight: bold; }
+.chroma .gi { color: #589819; }
+.chroma .go { color: #cccccc; }
+.chroma .gp { color: #aaaaaa; }
+.chroma .gs { font-weight: bold; }
+.chroma .gu { color: #ffffff; text-decoration: underline; }
+.chroma .gt { color: #e75959; }
+.chroma .gl { text-decoration: underline; }
+.chroma .w { color: #878787; }
